# acoupi_birdnet

./: 404.html  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
css/: style.css
docs/: faq.md  index.md
docs/explanation/: birdnet_program.md  index.md
docs/reference/: configuration.md  index.md  model.md  program.md
docs/tutorials/: configuration.md  deployment.md  index.md  installation.md
docs/user_guide/: faq.md
explanation/: index.html
explanation/birdnet_program/: index.html
faq/: index.html
reference/: index.html
reference/configuration/: index.html
reference/model/: index.html
reference/program/: index.html
search/: search_index.json
src/acoupi_birdnet/: __init__.py  configuration.py  model.py  program.py
tests/: test_model.py
tutorials/: index.html
tutorials/configuration/: index.html
tutorials/deployment/: index.html
tutorials/installation/: index.html
