[project]
name = "acoupi_birdnet"
version = "0.1.0"
description = "An acoupi-compatible BirdNET model implementation"
authors = [
    {name = "Aude Vuilliomenet", email = "aude.vuilliomenet.18@ucl.ac.uk"}, 
    {name = "Santiago Martinez", email = "santiago.balvanera.20@ucl.ac.uk"},
    { name = "Aude Vuilli", email = "aude.vuilliomenet.18@ucl.ac.uk" },
]
dependencies = [
    "tflite>=2.10.0",
    "librosa>=0.10.1",
    "birdnetlib>=0.13.1",
    "tflite-runtime>=2.14.0",
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
dev-dependencies = [
    "acoupi @ file://../acoupi",
    "pytest>=7.4.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.9"

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "D"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-local-folder = ["src", "acoupi_birdnet"]
