[project]
name = "acoupi_birdnet"
version = "0.1.0"
description = "An acoupi-compatible BirdNET model implementation"
authors = [
  { name = "Aude Vuilliomenet", email = "aude.vuilliomenet.18@ucl.ac.uk" },
  { name = "Santiago Martinez", email = "santiago.balvanera.20@ucl.ac.uk" },
]
dependencies = [
  "acoupi",
  "audioclass[birdnet]>=0.2.2",
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=7.4.3",
  "pyright>=1.1.363",
  "ruff>=0.4.4",
  "flower>=2.0.1",
]

[tool.uv.sources]
acoupi = { path = "../acoupi" }

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.9"

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "D"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-local-folder = ["src", "acoupi_birdnet"]
